--- a/hof/src/App.css
+++ b/hof/src/App.css
@@ -49,5 +49,6 @@ ul{
   padding: 20px;
   justify-content: left;
   margin:5px;
-  border: 2px solid blue;
+  border: 2px solid black;
+  color:blue;
 }
